--- a/package.json
+++ b/package.json
@@ -1,26 +1,8 @@
 {
-  "name": "site-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
-  },
-  "dependencies": {
-    "next": "16.1.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
+  "name": "rocketseat-next-graduation",
+  "author": "Bruno Petrolini <bruno.petrolini@outlook.com.br>",
+  "packageManager": "pnpm@10.26.2",
   "devDependencies": {
-    "@biomejs/biome": "2.3.11",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@biomejs/biome": "^2.3.11"
   }
 }
