chore: update .gitignore for improved clarity and organization
- Added a header for editor directories and files
- Updated the exception for .vscode to include extensions.json
- Added a header for system files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# editor
+# Editor directories and files
 .vscode/*
-!.vscode/settings.json
+!.vscode/extensions.json
 *.code-workspace
+
+# System Files
+.DS_Store
