chore: refactor project structure and clean up unused assets
- Removed pnpm workspace configuration file.
- Updated PostCSS configuration to use double quotes.
- Deleted unused SVG files from the public directory.
- Updated global CSS styles by removing unused font variables.
- Refactored Next.js application files to use consistent quote styles.
- Changed the language attribute in the HTML document from English to Brazilian Portuguese.
- Modified the API response to use double quotes for the name property.
- Updated the homepage to include a heading instead of plain text.

--- a/site-blog/biome.json
+++ b/site-blog/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.13/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -48,7 +48,10 @@
               ":BLANK_LINE:",
               ":PACKAGE:",
               ":BLANK_LINE:",
-              [":ALIAS:", ":PATH:"]
+              [
+                ":ALIAS:",
+                ":PATH:"
+              ]
             ]
           }
         }
