--- a/site-blog/package.json
+++ b/site-blog/package.json
@@ -10,12 +10,12 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "next": "16.1.3",
+    "next": "16.1.5",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.11",
+    "@biomejs/biome": "^2.3.13",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
