--- a/site-blog/package.json
+++ b/site-blog/package.json
@@ -13,10 +13,10 @@
     "@radix-ui/react-slot": "1.2.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "contentlayer": "0.3.4",
+    "contentlayer2": "0.5.8",
     "lucide-react": "0.563.0",
     "next": "16.1.5",
-    "next-contentlayer": "0.3.4",
+    "next-contentlayer2": "0.5.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "3.4.0",
